--- a/Inputtype.html
+++ b/Inputtype.html
@@ -9,11 +9,16 @@
 <form action="/action_page.php">
   <label for="phone">Enter a phone number:</label><br><br>
   <input type="tel" id="phone" name="phone" placeholder="123-45-678" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required><br><br>
-  <small>Format: 123-45-678</small><br><br>
+<small>Format: 123-45-678</small><br><br>
+</form> 
+  
+  
+  
   
   <label for="week">Select a week:</label>
   <input type="week" id="week" name="week"><br><br>
-  
+ 
+ 
   <label for="cars">Choose a car:</label>
 <select id="cars" name="cars" size="2">
   <option value="volvo">Html</option>
@@ -23,19 +28,34 @@
 </select><br><br>
  
  
+ 
+ 
+ 
+ 
+ 
+ 
  <label for="cars">Choose a car:</label>
-<select id="cars" name="cars" size="2" multiple>
+<select id="cars" name="cars" size="3" multiple>
   <option value="volvo">Volvo</option>
   <option value="saab">Saab</option>
   <option value="fiat">Fiat</option>
   <option value="audi">Audi</option>
 </select><br><br>
 
+
+
+
+
+
+
 <textarea name="address" style="width:300px; height:100px;">
 Please Provide your Address
 </textarea><br><br>
+
 <label for="pin">PIN:</label><br>
-<input type="text" id="pin" name="pin" size="15"><br><br>
+<input type="text" id="pin" name="pin" size="70"><br><br>
+
+
 
 
   <fieldset>
@@ -53,6 +73,10 @@ Please Provide your Address
     <option value="Chrome">
     <option value="Opera">
     <option value="Safari">
+	<option value="Op">
+    <option value="Sa">
+	<option value="Fi">
+    <option value="Ch">
   </datalist>
 
   
@@ -62,9 +86,9 @@ Please Provide your Address
 <br><br>
 <form action="#" oninput="x.value=parseInt(a.value)+parseInt(b.value)">
   0
-  <input type="range" id="a" name="a" value="50">
+  <input type="range" id="a" name="a1" value="0">
   100 +
-  <input type="number" id="b" name="b" value="50">
+  <input type="number" id="b" name="b1" value="50">
   =
   <output name="x" for="a b"></output>
   <br><br>
@@ -73,7 +97,7 @@ Please Provide your Address
 
 <form>
   <label for="Price">Price:</label><br>
-  <input type="text" id="price" name="price" value="$100" readonly><br>
+ <input type="text" id="price" name="price" value="$100" readonly><br>
   <label for="Qty">Qty:</label><br>
   <input type="number" id="qty" name="qty" value="10"><br>
   <label for="Shipping">Shipping:</label><br>
